syntax = "proto3";

import "validate/validate.proto";
import "google/protobuf/empty.proto";

option go_package = "./pbuser";

package user;

service Sign {
  rpc Sign (SignRequest) returns (SignResponse) {}

  rpc SignIn (SignInRequest) returns (SignInResponse) {}
  rpc SignOut (SignOutRequest) returns (google.protobuf.Empty) {}

  rpc SwitchRole (SwitchRoleRequest) returns (SignResponse) {}

  rpc SignUpStart (SignUpStartRequest) returns (SignUpStartResponse) {}
  rpc SignUpShared (SignUpSharedRequest) returns (google.protobuf.Empty) {}
  rpc SignUpSelectCategory (SignUpSelectCategoryRequest) returns (google.protobuf.Empty) {}

  rpc SignUpIdentification (SignUpIdentificationRequest) returns (google.protobuf.Empty) {}

  rpc SignUpEnd (SignUpEndRequest) returns (SignUpEndResponse) {}

  rpc FetchOnboarding (FetchOnboardingRequest) returns (FetchOnboardingResponse) {}

  rpc FetchSelectableCategories (FetchSelectableCategoriesRequest) returns (FetchSelectableCategoriesResponse) {}

  rpc ForgotPassword (ForgotPasswordRequest) returns (google.protobuf.Empty) {}
  rpc ResetPassword (ResetPasswordRequest) returns (google.protobuf.Empty) {}

}

message SignUpIdentificationRequest {
  uint64 dni = 1;

  Medic medic = 2;
  Psychologist psychologist = 3;
  Lawyer lawyer = 4;
  Attorney attorney = 5;
  EducationalInstitution educational_institution = 6;

  message Medic {
    string name = 1;
    string surname = 2;
  }

  message EducationalInstitution {
    uint64 cue = 1;
  }

  message Attorney {
    string name = 1;
    string surname = 2;
  }

  message Lawyer {
    string name = 1;
    string surname = 2;
  }

  message Psychologist {
    uint64 license = 1;
  }
}


message SignUpSelectCategoryRequest{
  uint64 onboarding_id = 1;
  string category_name = 2;
}

message FetchSelectableCategoriesRequest {
  uint64 onboarding_id = 1;
}

message FetchSelectableCategoriesResponse {
  repeated Category categories = 1;
}

message Category {
  string name = 1;
  repeated Category childs = 2;
}

message SwitchRoleRequest {
  string access_token = 1;
  string role = 2;
  string password = 3;
}

message SignOutRequest {
  string access_token = 1;
}

message ResetPasswordRequest {
  string token = 1;
  string password = 2;
}

message ForgotPasswordRequest {
  string email = 1;
}

message FetchOnboardingRequest {
  uint64 onboarding_id = 1;
}

message FetchOnboardingResponse{
  string role = 1;
  string email = 2;
  string name = 3;
  string surname = 4;
  int64 stage = 5;
}

message SignUpStartRequest {
  string role = 1;
}

message SignUpStartResponse{
  uint64 onboarding_id = 1;
}

message SignUpSharedRequest {
  uint64 onboarding_id = 1;
  string email = 2;
  string name = 3;
  string surname = 4;
}

message SignUpEndRequest{
  uint64 onboarding_id = 1;
  string password = 2;
}

message SignUpEndResponse {
  SignInUser user = 1;
}

message SignInRequest {
  string email = 1;
  string password = 2;
}

message SignInResponse {
  repeated SignInUser users = 1;
  uint64 sign_token_exp_ns = 7;

}

message SignInUser {
  uint64 id = 1;
  string sign_token = 2;
  string role = 3;
  string name = 4;
  string surname = 5;
  string email = 6;
}

message SignRequest {
  string sign_token = 1;
}

message SignResponse {
  string access_token = 1;
  string refresh_token = 2;

  uint64 access_token_exp_ns = 3;
  uint64 refresh_token_exp_ns = 4;
}


service Config {
  rpc ChangePassword (ChangePasswordRequest) returns (google.protobuf.Empty) {}
  rpc ChangeBasicInfo (ChangeBasicInfoRequest) returns (google.protobuf.Empty) {}
}

message ChangePasswordRequest {
  string access_token = 1;
  string old_password = 2;
  string new_password = 3;
}

message ChangeBasicInfoRequest {
  string access_token = 1;
  string name = 2;
  string surname = 3;
}

